...
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <connections>
                                    <action selector="performZoom:" target="-1" id="DIl-cC-cCs"/>
                                </connections>
                            </menuItem>
                            <menuItem isSeparatorItem="YES" id="eu3-7i-yIM"/>
                            <menuItem title="Toggle Full Screen" keyEquivalent="f" id="8kY-Pi-KaY">
                                <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                <connections>
                                    <action selector="toggleGhosttyFullScreen:" target="-1" id="QB9-7R-xyc"/>
                                </connections>
                            </menuItem>
                            <menuItem title="Show/Hide All Terminals" id="DOX-wA-ilh">
...
